# iudx-MOTION2NX-1

Dataprovider/image_provider/: MNIST_preprocess_image.py  Reconstruct.cpp  Reconstruct_0.cpp  cifar_preprocess_image.py  image_provider_CNN.cpp  output_shares_receiver.cpp  output_shares_receiver_0.cpp  pneumonia_preprocess_image.py
Documentation2NX/: .~lock.MOTION2NX_Installation_Guide.docx#  Documentation for smpc.docx  SMPC Operations.docx  SMPC in cloud.docx  SMPC- Deployment Handbook.docx  helper node write up.odt  horizontal_split_cnn.sh  horizontal_split_cnn1.sh  manual_edited.odt  prmc_run.odt
GUI/: File_location.py  save_cifar_images.ipynb
GUI/utility/: CNN_Split.py  CNN_helper.py  CNN_layer.py  File_location.py  File_location2.py  File_location3.py  NN.py  NN_helper (copy).py  NN_helper.py  Pneumonia.py  SMPC.py  SMPC2.py  Six_layer.py  cifar10.py  five_layer.py  four_layer.py  loading.py  paint.py  pnuemonia.ipynb  preprocess_image2.py  result.py  result_Cifar10.py  result_mnist.py  result_pneumonia.py  two_layer.py
GUI/utility/Images_Video/: NN.png:Zone.Identifier  NN_helper.png:Zone.Identifier
config_files/: ex-cifar-smpc-cnn-config.json  ex-mnist-smpc-cnn-config.json  example-image_config.json  example-model_cnn_config.json  example-model_const_config_5L.json  example-smpc-cnn-config.json  example-smpc-helpernode-config.json  example-smpc-pn-helpernode-config.json  image_config_constmodel.json  model_pneumonia_config.json  smpc-helpernode-config-cifar.json  smpc-pn-helpernode-config.json
example-data/ImageProvider/images/: X2.csv  X200.csv  X201.csv  X202.csv  X203.csv  X204.csv  X205.csv  X206.csv  X207.csv  X208.csv  X209.csv  X210.csv  X211.csv  X212.csv  X213.csv  X214.csv  X215.csv  X216.csv  X217.csv  X218.csv  X219.csv  X220.csv  X221.csv  X222.csv  X223.csv  X224.csv  X225.csv  X226.csv  X227.csv  X228.csv  X229.csv  X230.csv  X231.csv  X232.csv  X233.csv  X234.csv  X235.csv  X236.csv  X237.csv  X238.csv  (+161 more)
example-data/ImageProvider/images_actualanswer/: X100.csv  X1000.csv  X10000.csv  X1001.csv  X1002.csv  X1003.csv  X1004.csv  X1005.csv  X1006.csv  X1007.csv  X1008.csv  X1009.csv  X101.csv  X1010.csv  X1011.csv  X1012.csv  X1013.csv  X1014.csv  X1015.csv  X1016.csv  X1017.csv  X1018.csv  X1019.csv  X102.csv  X1020.csv  X1021.csv  X1022.csv  X1023.csv  X1024.csv  X1025.csv  X1026.csv  X1027.csv  X1028.csv  X1029.csv  X103.csv  X1030.csv  X1031.csv  X1032.csv  X1033.csv  X1034.csv  (+9853 more)
scripts/Non-ServerModel_Architecture/: run_ml_0.sh  run_ml_1.sh
scripts/Non-ServerModel_Architecture/Constantmodel/: accuracy_testing_const_model.sh  remote_server0_constmodel.sh  remote_server1_constmodel.sh
scripts/Non-ServerModel_Architecture/HelperNode/: helpernode_server0.sh  helpernode_server1.sh
scripts/Non-ServerModel_Architecture/HelperNode/cnn/: helpernode_server0_cnn.sh  helpernode_server1_cnn.sh  helpernode_server2_cnn.sh
scripts/Non-ServerModel_Architecture/Split/: remote_server0_split.sh  remote_server1_split.sh
scripts/Non-ServerModel_Architecture/Split/CNN/: Hsplit_remote_server0_cifar.sh  Hsplit_remote_server0_mnist.sh  Hsplit_remote_server1_cifar.sh  Hsplit_remote_server1_mnist.sh  docker-compose.Hsplit_cifar.yaml  docker-compose.Hsplit_mnist.yaml  remote_server0_split_CNN.sh  remote_server1_split_CNN.sh
scripts/ServerModel_Architecture/HelperNode/: ImageProvider.sh  helpernode_server0.sh  helpernode_server1.sh
scripts/ServerModel_Architecture/HelperNode/CNN/: ImageProvider.sh  ModelProvider.sh  cifarConfig.sh  docker-compose.remote_helpernode_cnnservermodel.yaml  helpernode_server0_cnn.sh  helpernode_server1_cnn.sh  helpernode_server2_cnn.sh
scripts/ServerModel_Architecture/HelperNode/MultiCNN/: MUL_ImageProvider.sh  MUL_ModelProvider.sh  MUL_helpernode_server0_cnn.sh  MUL_helpernode_server1_cnn.sh  MUL_helpernode_server2_cnn.sh  cifarConfig.sh  docker-compose.remote_helpernode_cnnservermodel.yaml  docker-compose.remote_helpernode_cnnservermodel_cifar.yaml  mnistConfig.sh
scripts/ServerModel_Architecture/HelperNode/Pneumonia/: ImageProvider.sh  ModelProvider.sh  docker-compose.remote_helpernode_pnservermodel.yaml  helpernode_server0_pn.sh  (+2 more)
scripts/ServerModel_Architecture/Split/: ImageProvider.sh  ModelProvider.sh  remote_server0_split.sh  remote_server1_split.sh
src/examples/: CMakeLists.txt
src/examples/Haritha_files/: Const_Matrix_mul.cpp
src/examples/accuracy_testing/: CMakeLists.txt  Image_Share_Receiver_CNN.cpp  Weights_Share_Receiver_CNN.cpp  argmax.cpp  constant_model_neural_network.cpp  conv.cpp  conv_h_split.cpp  conv_split.cpp  final_output_provider.cpp  final_output_provider_0.cpp  tensor_argmax.cpp  tensor_gt_relu.cpp  tensor_maxpool.cpp  tensor_maxpool_split.cpp  test_tensor_maxpool.cpp  training.cpp
src/examples/conversion_1/: CMakeLists.txt  cnn.cpp  machine_learning_1l_clear.cpp  machine_learning_1l_smpc.cpp  sharegen.cpp  test_maxpool_op.cpp  training_neuralnet_clear.cpp  training_neuralnet_smpc.cpp
src/examples/logistic_regression/: training_all_labels.cpp
src/examples/logistic_regression_5piece_sigmoid/: CMakeLists.txt  machine_learning_1l_clear_5sigmoid.cpp  machine_learning_1l_smpc_5sigmoid.cpp
src/examples/server/: CMakeLists.txt  server0_cnn.cpp  server1_cnn.cpp  server2_cnn.cpp
src/examples/tensor_dot_product/: dp.cpp
src/examples/test/: CMakeLists.txt  argmax.cpp  constMatMul.cpp  indicator.cpp  reconstruct_cnn.cpp  share_generation.cpp  sigmoid.cpp  sigmoid5.cpp  test_argmax_tensor.cpp  test_cnn.cpp
src/examples/training_ml/: logistic_regression.cpp  logistic_regression_10.cpp  training_neuralnet.cpp
src/examples/training_ml_clear/: CMakeLists.txt  logistic_regression_10.cpp
src/examples/training_ml_smpc/: CMakeLists.txt  training_all_labels.cpp
src/motioncore/communication/: tcp_transport.cpp
src/motioncore/tensor/: tensor_op_factory.cpp  tensor_op_factory.h
(+39 files in other folders)
